--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -14,14 +14,15 @@
 <th>작성자</th>
 <th>작성일자</th>
 </tr>
-<tr>
-<tr th:each="board : ${list}">
+
+<!-- <tr th:each="board : ${list}">
 <td th:text="${board.boardNum}"></td>
-<td th:text="${board.cathgory}"></td>
+<td th:text="${board.category}"></td>
 <td th:text="${board.title}"></td>
 <td th:text="${board.loginId}"></td>
 <td th:text="${board.date}"></td>
-</tr>
+<td th:text="${board.startDate}"></td>
+</tr> -->
 </table>
 
 </body>
