--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -7,22 +7,23 @@
 <body>
 <table border="1">
 <tr>
+
 <th>글번호</th>
 <th>카테고리</th>
-<th>시작일자</th>
 <th>제목</th>
 <th>작성자</th>
 <th>작성일자</th>
+<th>시작일자</th>
 </tr>
 
-<!-- <tr th:each="board : ${list}">
+<tr th:each="board : ${list}">
 <td th:text="${board.boardNum}"></td>
 <td th:text="${board.category}"></td>
 <td th:text="${board.title}"></td>
 <td th:text="${board.loginId}"></td>
 <td th:text="${board.date}"></td>
 <td th:text="${board.startDate}"></td>
-</tr> -->
+</tr>
 </table>
 
 </body>
