--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -12,7 +12,8 @@
 	<option value="프로젝트팀구하기">프로젝트팀구하기</option>
 	</select>
 	</div>
-    <div>프로젝트 시작일자<input type="date" name="startDate"></div>
+	<div>작성자<input type="text" name="memberNum" th:value=3 readonly></div>
+    <div>프로젝트 시작일자<input type="date" name="startDate" ></div>
     <div>프로젝트주제<input type="text" name="title"></div>
     <div>내용
     <textarea rows="40" cols="100" name="content"></textarea>
