--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -15,14 +15,10 @@
 <header>
 </header>
 
-
-<div class="b">
-
-<section class="sec1">
-
-<div class="mem">
+<div>
+<section>
+<div><input type="hidden" th:name="boardNum" th:value="${board.boardNum}"/>
 <h1>앱 개발 프로젝트 개발자분을 모집해요!</h1>
-
 </div>
 </section>
 </div>
@@ -30,16 +26,15 @@
 <div>
 <table width="1000" height="800">
 	<tr>
-		<td>모집구분 <input type="text" value= "프로젝트" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;"></td>
-		<td>진행방식 <input type="text" value= "오프라인" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;"></td>
+		<td>팀원구하기 <input type="text" th:name="category" th:value= "{board.category}" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;"></td>
+		<td>시작일자 <input type="text" th:name="startDate" th:value= "{board.startDate}" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;"></td>	
 	</tr>
 	<tr>
-		<td>모집인원 <input type="text" value= "4명" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;"></td>
-		<td>시작예정 <input type="text" value= "2023.03.06" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;"></td>
+		<td>프로젝트명 <input type="text" th:name="title" th:value= "{board.title}" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;"></td>
 	</tr>
 	<tr>
 		<td>프로젝트 소개</td>
-		<td><input type="context" value= "내용글 작성 하기" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px; width:800px; height:400px;"></td>
+		<td><input type="text" th:name="content" th:value="{board.content}" style="border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px; width:800px; height:300px;"></td>
 	</tr>
 	<tr>
 		<td><input type="button" onClick="getPost('01')" value="수정하기"><input type="button" onClick="getPost('02')" value="삭제하기"></td>
