--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -8,11 +8,11 @@
 <form action="/board/write" method="post">
 	<div>카테고리
 	<select name="category" style="width:200px;height:30px;">
-	<option value="팀원구하기">팀원구하기</option>
-	<option value="프로젝트팀구하기">프로젝트팀구하기</option>
+	<option value="recruit">팀원구하기</option>
+	<option value="apply">프로젝트팀구하기</option>
 	</select>
 	</div>
-	<div>작성자<input type="text" name="memberNum" th:value=3 readonly></div>
+	<div>작성자<input type="text" name="memberNum" th:value=4 readonly></div>
     <div>프로젝트 시작일자<input type="date" name="startDate" ></div>
     <div>프로젝트주제<input type="text" name="title"></div>
     <div>내용
