--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -6,5 +6,49 @@
 </head>
 <body>
 
+
+
+<div th:text="${detail.title}">
+제목
+</div>
+
+<!--  멤버 정보 -->
+<div class=board-info>
+
+<span th:text="${detail.memberNum}">
+멤버번호
+</span>
+
+<span th:text="${detail.date}">
+게시일자
+</span>
+</div>
+<div class="project-info">
+
+<span>모집인원</span>
+
+<span th:text="${detail.startDate}">시작예정일</span>
+
+<span>예상기간(개월수로 표기, 장기 항목 별도)</span>
+
+</div>
+
+<!-- 프로젝트 소개란. content 입력 -->
+<div>
+<a th:text="${detail.content}"></a>
+프로젝트 소개
+</div>
+
+
+
+<!--  댓글 -->
+<div>
+댓글란
+</div>
+
+
+
 </body>
 </html>
+
+
