--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,9 +1,7 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');
 *{
-/* #324A92 파랑*/
-/* #DCDADB 흰 */
-/* #777FAD 퍼플*/
-/* #6B8596 섀도우블루 */
+  font-family: Roboto;
 margin: 0;
 padding: 0;
 box-sizing: border-box;
@@ -14,12 +12,12 @@ font-family: sans-serif;
 
 }
 body {
-margin: 0;
+margin: 0 auto;
 padding: 0;
-margin-bottom: 0;
+
 }
 section{
-  border: solid 1px red;
+
   display: block;
   width: 100%;
   text-align: center;
@@ -27,21 +25,21 @@ section{
 
 a{
   text-decoration: none;
-  color: none;
-  text-decoration: none;
-  background-color: none;
+
+
+
 }
 
 header{
+  font-weight:700;
+  display: flex;
 z-index: 32122130;
 padding: 0;
 top:0;
 position: sticky;
 width: 100%;
 height: 170px;
-
 vertical-align: bottom;
-
 }
 
 header #logo{
@@ -58,7 +56,7 @@ transform: translate(-50%, -50%);
   
 padding-top:5px;
 bottom : 0;
-border:1px solid red;
+
 position : absolute;
 left: 50%;
 transform: translate(-50%,-0%);
@@ -80,10 +78,15 @@ float: right;
 }
 
 
-.menu a:hover {
-background-color: none;
-color: black;
-}
+.menu a { text-decoration: none; color: black; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:focus { text-decoration: none; }
+a:hover, a:active { text-decoration: none; }
+
+
+
+
 /* 여기까지 헤더 */
 
 
@@ -143,17 +146,12 @@ padding-top: 180px;
   height: 50%;
 }
 
-
-
-
-
-
 /* 여기까지 섹션1 로그인,조인페이지 */
 .cards{
   margin-top: 30px;
 }
 .sec2{ 
-  border: solid 1px blue;
+
   padding-top: 180px;
   height: 70vh;
 }
@@ -167,14 +165,14 @@ padding-top: 180px;
   height: 80%;
   text-align: center;
   float: left;
-  border: solid red 1px;
+
 }
 .u{
   width: 50%;
   height: 80%;
   text-align: center;
   float: left;
-  border: solid red 1px;
+
  
 }
 
@@ -183,22 +181,16 @@ padding-top: 180px;
 /* 여기까지 섹션 2 내 카드, 찾는 능력 카드 매칭 푸터*/
 
 .sec3{  
-  height: 35vh;
+  height: 100vh;
 }
 .matching{
-  height: 25vh;
+  height: 7vh;
+
 }
-h1{
-margin-top:50px; 
-}
-.footer{
-background: #444444;
-border: solid 1px green;
-text-align: center;
-height:40%;
-bottom: 0;
-}
-footer .table{
-border: solid 1px green;
-height: 300px;
+
+
+
+
+.footer-right{
+  margin-top: 100px;
 }
