--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -22,6 +22,8 @@
 <td th:text="${board.title}"></td>
 <td th:text="${board.loginId}"></td>
 <td th:text="${board.date}"></td>
+
+java, js, git
 <td th:text="${board.startDate}"></td>
 </tr>
 </table>
