기술스택을 배열로 저장하게 구현
.

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -22,11 +22,10 @@
 <td th:text="${board.title}"></td>
 <td th:text="${board.loginId}"></td>
 <td th:text="${board.date}"></td>
-
-java, js, git
 <td th:text="${board.startDate}"></td>
 </tr>
 </table>
 
+<a href="write">aa</a>
 </body>
 </html>
