--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -9,10 +9,10 @@
 <body>
 
 	<!--  목표?
-write에 팀원구하기 / 팀 구하기 토글기능 추가
 
-value="recruit"일 경우 > 시작일자, 
-value="apply"일 경우 > 
+
+value="recruit"일 경우 > 시작일자, 요구스택
+value="apply"일 경우 > 가능스택
 
  -->
 	<form action="/board/write" method="post" enctype="multipart/form-data">
@@ -22,16 +22,16 @@ value="apply"일 경우 >
 				<option value="apply">프로젝트팀구하기</option>
 			</select>
 		</div>
-		<div>작성자<input type="text" name="memberNum" value="(미완성)세션에서 받아와야함" readonly></div>
+		<div>작성자<input type="text" name="memberNum" value="3" readonly></div>
 		
-		<div class="recruitOnly"> 
-		<div>프로젝트 시작일자<input type="date" name="startDate"></div>
 		
-		</div>
+		<div>프로젝트 시작일자<input type="date" name="startDate"></div>		
 		
-		<div class="applyOnly">
-		</div>
-		
+
+
+<div>스택 <div th:replace=@{/board/multiSelect}></div>
+</div>
+
 		<div>제목<input type="text" name="title"></div>
 		<div>
 			<input type="file" id="chooseFile" name="chooseFile" accept="image/*" onchange="loadFile(this)">
@@ -47,4 +47,8 @@ value="apply"일 경우 >
 	</form>
 </body>
 
+
+<script>
+
+</script>
 </html>
