--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -34,7 +34,7 @@ value="apply"일 경우 > 가능스택
 
 		<div>제목<input type="text" name="title"></div>
 		<div>
-			<input type="file" id="chooseFile" name="chooseFile" accept="image/*" onchange="loadFile(this)">
+			<input type="file" id="chooseFile" name="uploadFile" accept="image/*">
 		</div>
 		
 		<div>내용
