--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -15,7 +15,9 @@
 <th>작성일자</th>
 <th>시작일자</th>
 </tr>
-
+<!-- <form name="searchList" action="/board/list" method="post">
+   <input type='search' name='searchKeyword' /><button type="submit">검색</button>
+</form> -->
 <tr th:each="board : ${list}">
 <td><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.boardNum}"></a></td>
 <td th:text="${board.category}"></td>
