--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -20,7 +20,7 @@
 <td><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.boardNum}"></a></td>
 <td th:text="${board.category}"></td>
 <td th:text="${board.title}"></td>
-<td th:text="${board.loginId}"></td>
+<td th:text="${board.memberNum}"></td>
 <td th:text="${board.date}"></td>
 <td th:text="${board.startDate}"></td>
 </tr>
