--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -29,7 +29,10 @@ value="apply"일 경우 > 가능스택
 
 
 
-<div>스택 <div th:replace=@{/board/multiSelect}></div>
+<div> <div th:replace=@{/board/multiSelect}></div>
+
+<div style="display:none"><input type="text" name="stack" id="stack" value="밸류"/></div>
+
 </div>
 
 		<div>제목<input type="text" name="title"></div>
@@ -40,9 +43,7 @@ value="apply"일 경우 > 가능스택
 		<div>내용
 			<textarea rows="40" cols="100" name="content" autofocus="autofocus"></textarea>
 		</div>
-		<div>
-			<input type="file" id="chooseFile" name="chooseFile" accept="image/*" onchange="loadFile(this)" autofocus="autofocus">
-		</div>
+		
 		<button type="submit">저장</button>
 		<button type="button" onclick="location.href='/board/list'">목록</button>
 
