--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -2,8 +2,14 @@
 <html>
 <head xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
+
 <title>상세보기 페이지</title>
+
+<style>
+
+</style>
 </head>
+
 <body>
 
 
