--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -2,56 +2,108 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="UTF-8">
-	<title>Insert title here</title>
-</head>
+<link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;400&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
 
+<title>게시글 작성</title>
+</head>
+<style>
+*{
+margin: 0;
+padding: 0;
+font-family: 'Gothic A1', sans-serif;
+}
+
+section{
+	text-align: center;
+	text-align: center;
+
+}
+
+select{
+	position: relative;
+	margin-top: 50px;
+	text-align: center;
+	height: 50px;
+
+
+}
+.member{
+position: absolute;
+margin-left: 0px;
+padding: 10px;
+
+}
+.writer{
+	float: left;
+	width:600px;
+	margin-top: 50px;
+
+
+}
+.upload{
+text-align: center;
+
+}
+.buttons{
+text-align: center;
+}
+.buttons input{
+
+float: right;
+}
+</style>
 <body>
 
-	<!--  목표?
+<!--  목표?
 
 
 value="recruit"일 경우 > 시작일자, 요구스택
 value="apply"일 경우 > 가능스택
 
- -->
-	<form action="/board/write" method="post" enctype="multipart/form-data">
-		<div>카테고리
-			<select name="category" style="width:200px;height:30px;">
-				<option value="recruit">팀원구하기</option>
-				<option value="apply">프로젝트팀구하기</option>
-			</select>
-		</div>
-		<div>작성자<input type="text" name="memberNum" value="3" readonly></div>
+-->
+	<section>
 
-
-		<div>프로젝트 시작일자<input type="date" name="startDate"></div>
+<form action="/board/write" method="post" enctype="multipart/form-data">
+<select name="category" >
+<option value="recruit">팀원구하기</option>
+<option value="apply">프로젝트팀구하기</option>
+</select>
 
 
 
+
+<div class="member">
+
+
+
+<div class="writer">작성자:<input type="text" name="memberNum" value="3" readonly>
+<div>제목:<input type="text" name="title"></div>
+<div>프로젝트 시작일:<input type="date" name="startDate"></div>
+</div>
 <div> <div th:replace=@{/board/multiSelect}></div>
-
 <div style="display:none"><input type="text" name="stack" id="stack" value="밸류"/></div>
+
+
 
 </div>
 
-		<div>제목<input type="text" name="title"></div>
-		<div>
-			<input type="file" id="chooseFile" name="uploadFile" accept="image/*">
-		</div>
 
-		<div>내용
-			<textarea rows="40" cols="100" name="content" autofocus="autofocus"></textarea>
-		</div>
-		
-		<button type="submit">저장</button>
-		<button type="button" onclick="location.href='/board/list'">목록</button>
+<div class="upload">
+<textarea class="textarea" cols="50" rows="10" name="content" autofocus="autofocus" placeholder="내용"></textarea>
+</div>
+<div class="buttons">
+<button type="submit">저장</button>
+<button type="button" onclick="location.href='/board/list'">목록</button>
 
-	</form>
+<input type="file" id="chooseFile" name="uploadFile" accept="image/*">
+
+</div>
+</div>
+</form>
+</section>
+
+
 </body>
 
-
-<script>
-
-</script>
 </html>
