레이아웃,ui,design sec0~sec2(memberservice)까지 찐막 로고변경 -by han

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -18,10 +18,26 @@ body {
 	background:#ECF0F3;
 	margin: 0;
 	padding: 0;
-
 }
+.side-left{
 
+	position: absolute;
+	top: 0; left: 0;
+	height: 450%;
+	width: 13%;
+	background: rgb(130, 174, 247);
+	box-shadow: 1em 0 .1em  rgb(130, 174, 247);
+}
+.side-right{
 
+	position: absolute;
+	top: 0; right: 0;
+	height: 450%;
+	width: 13%;
+	background: rgb(130, 174, 247);
+	box-shadow: -1em 0 .1em
+	rgb(130, 174, 247);
+}
 
 a {
 	text-decoration: none;
@@ -31,61 +47,71 @@ a {
 }
 
 header {
+	margin:0 auto;
+	transform: translate(-0%,0);
 	box-shadow: 2px 5px 2px 1px rgba(255, 255, 255, 0.47);
-	background: rgba(255, 255, 255, 0.6);
+	background: #fff;
 	font-weight: 400;
 	display: flex;
 	z-index: 32122130;
 	padding: 0;
 	top: 0;
 	position: sticky;
-	width: 100%;
+	width: 70.5%;
 	height: 170px;
 	vertical-align: bottom;
+	opacity: 0.8;
 }
 
 header #logo {
 	cursor: pointer;
 	margin-top: 15px;
 	padding-bottom: 50px;
-	width: 100px;
+	width: 250px;
+	height: 150px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	opacity: 0.8;
+
+
+
 }
 
 .menu {
-
+	display: inline-block;
 	padding-top: 5px;
 	bottom: 0;
 	position: absolute;
 	left: 50%;
-	transform: translate(-50%, -0%);
+	transform:translate(-50%, -50%);
 	width: 800px;
 	text-align: center;
 }
 
-.menu a {
 
-	font-size: 30px;
-}
 
-.menu :nth-child(1) {
+.menu .menu-home-icon {
+	color: rgba(79, 79, 79, 0.91);
+	transform: translate(50%,0%);
 	float: left;
-
 }
-.menu:nth-child(2){
+.menu .menu-login-icon {
+	color: rgba(79, 79, 79, 0.91);
+
 	text-align: center;
-	transform: translate(-43%, 10%);
-
 }
-.menu :nth-child(3) {
+
+.menu .menu-board-icon {
+	color: rgba(79, 79, 79, 0.91);
+	transform: translate(-50%,0%);
 	float: right;
 }
 
 
 .menu a {
+
 	text-decoration: none;
 	color: black;
 }
@@ -144,17 +170,23 @@ a:active {
 	padding-top: 180px;
 
 }
+
+
+
 .mem{
 	margin-top:100px;
 	display: flex;
 }
 
+
 .mem .login {
 	align-items: center;
 	width: 50%;
+	margin-left:200px;
 	margin-top: 60px;
 	height: 100%;
 }
+
 .login-wrapper{
 	 margin: auto;
 	 width: 400px;
@@ -163,10 +195,13 @@ a:active {
 	 box-sizing: border-box;
 
  }
+
+
 .login-wrapper ul{
 	margin-left:65px;
 	color: #5b5959;
 }
+
 .login-wrapper ul li{
 	float: left;
 }
@@ -192,9 +227,12 @@ a:active {
 	background-color: #F8F8F8;
 
 }
+
+
 #login-form > input::placeholder{
 	color: #8e8e8e;
 }
+
 #login-form > input[type="submit"]{
 	color: #fff;
 	font-size: 16px;
@@ -204,9 +242,8 @@ a:active {
 }
 
 
-
 #login-form > label{
-	text-align:center;
+
 	color: #999999;
 }
 #login-form input[type="checkbox"] + label{
@@ -216,7 +253,6 @@ a:active {
 	background-size: contain;
 }
 #login-form input[type="checkbox"]:checked + label{
-
 	background-repeat: no-repeat;
 	background-size: contain;
 }
@@ -226,19 +262,107 @@ a:active {
 	height: 150px;
 }
 
+
+
 /*----------------------------Login end*/
 
 
 
 /*----------------------------join start*/
 .mem .join {
+	transform: translate(0,-4%);
 	text-align: center;
-	border: 1px solid red;
 	width: 50%;
 	margin-top: 60px;
 	height: 100%;
+	margin-right:200px;
 }
 
+#join-form > input[type="submit"]{
+
+	color: #fff;
+	font-size: 16px;
+	background-color: rgba(36, 123, 254, 0.76);
+	margin-top: 50px;
+	border: 1px solid rgba(11, 11, 11, 0.3);
+
+}
+#join-form > input::placeholder{
+	color: #8e8e8e;
+}
+#join-form button{
+
+	 color: #fff;
+	 font-size: 16px;
+	 background-color: rgba(36, 123, 254, 0.76);
+	 margin-top: 1px;
+	 border: 1px solid rgba(11, 11, 11, 0.3);
+
+ }
+#join-form > input{
+	display: inline-block;
+	transform: translate(30%,0px);
+	width: 100%;
+	height: 48px;
+	padding: 0 10px;
+	box-sizing: border-box;
+	border: 1px solid rgba(11, 11, 11, 0.3);
+	margin-bottom: 8px;
+	border-radius: 6px;
+	background-color: #F8F8F8;
+
+}
+.join .join-wrapper{
+
+	align-items: center;
+	width: 50%;
+	margin-top: 60px;
+	height: 100%;
+	margin-left:65px;
+	color: #5b5959;
+
+}
+
+.email{
+	transform: translate(25%,0px);
+	display: inline-block;
+	width: 80%;
+	color: #fff;
+
+}
+.email input{
+
+	display: inline-block;
+	width: 100%;
+	height: 48px;
+	padding: 0 10px;
+	border: 1px solid rgba(11, 11, 11, 0.3);
+
+	margin-bottom: 8px;
+	border-radius: 6px;
+	background-color: #F8F8F8;
+
+}
+.email  button{
+
+	border-radius: 6px;
+	width: 50px;
+
+}
+
+.email label{
+	margin-left: 5px;
+	margin-top: 13px;
+	position: absolute;
+	display: inline-block;
+
+
+
+}
+.email label button p{
+	font-size: 12px;
+
+}
 
 /*----------------------------join end*/
 /* 여기까지 섹션1 로그인,조인페이지 */
