--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -5,15 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/static/slide.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+        <link rel="stylesheet" href="login-after.css">
+        <script src="/https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script language="javascript" src="/static/jquery/jquery-1.9.1.min.js" type="text/javascript"></script>
         <script language="javascript" src="/static/jquery/jquery-ui.min.js" type="text/javascript"></script>
         <script language="javascript" src="/static/jquery/jq.rolling.js" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" href="/static/jquery/jq.rolling.js"/>
-        <link rel="stylesheet" href="login-after.css">
+        <link rel="stylesheet" type="text/css" href="/static/jq.rolling.css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     </head>
 
@@ -21,17 +23,33 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="/static/images/logo.png" alt="" id="logo" onclick="goToScroll('a')">
+                    <img src="/static/images/llogo.gif" alt="" id="logo" onclick="goToScroll('a')">
                 </div>
                 <div class="menu">
-                    <a href="#sec2" onclick="goToScroll('a')">PRODUCTS</a>
-                    <a href="#sec3" onclick="goToScroll('b')">MYPAGE</a>
-                    <a href="#profile" onclick="goToScroll('c')">MATCHING</a>
+
+                    <a href="#sec2" onclick="goToScroll('a')"
+                       class="menu-home-icon"><span class="material-symbols-outlined">
+other_houses메인
+</span>
+                    </a>
+
+                    <a href="#sec3" onclick="goToScroll('b')" class="menu-login-icon"><span class="material-symbols-outlined">
+manage_accounts로그인
+</span>
+                    </a>
+
+                    <a href="#profile" onclick="goToScroll('c')"
+                       class="menu-board-icon">
+<span class="material-symbols-outlined">
+space_dashboard게시판
+</span>
+                    </a>
+
                 </div>
             </nav>
         </header>
-
-
+        <div class="side-left"></div>
+        <div class="side-right"></div>
         <!-- SECTION 0 PRODUCTS SLIDE START-->
         <div class="a">
             <section class="sec0">
@@ -49,13 +67,8 @@
                 <script>
                     $("#rolling").rolling(1200,600,{autoscroll:1, delay:1500});
                 </script>
-                <h1>PRODUCTS</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil rerum cumque animi minima explicabo fugit atque vitae quidem labore voluptates nulla aut, debitis sapiente quibusdam suscipit odit nobis doloribus maxime.</p>
             </section>
-
         </div>
-
-        <hr>
 
         <!-- SECTION 0 PRODUCTS SLIDE END-->
 
@@ -67,34 +80,33 @@
         <div class="b">
             <section class="sec1">
                 <div class="mem">
-                        <div class="card">
-                            <span class="level">junior</span>
-                            <img src="/static/images/PP.png" alt="my card" class='picture'>
-                            <h2>구ı얌둥ㅇı천Пг∩_∩♡〃</h2>
-                            <p>웹디자이너<br> Front End</p>
+                    <div class="card">
+                        <span class="level">junior</span>
+                        <img src="/static/images/PP.png" alt="my card" class='picture'>
+                        <h2>구ı얌둥ㅇı천Пг∩_∩♡〃</h2>
+                        <p>웹디자이너<br> Front End</p>
 
 
-                                <button id="edit">정보 수정</button>
+                        <button id="edit">정보 수정</button>
 
 
 
-                            <div class="skills">
-                                <h4>Skills</h4>
-                                <ul>
-                                    <li>UI / UX</li>
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                    <li>jQuery</li>
-                                    <li>React</li>
-                                    <li>Node JS</li>
-                                </ul>
-                            </div>
+                        <div class="skills">
+                            <h4>Skills</h4>
+                            <ul>
+                                <li>UI / UX</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>jQuery</li>
+                                <li>React</li>
+                                <li>Node JS</li>
+                            </ul>
                         </div>
                     </div>
+                </div>
             </section>
         </div>
-        <hr>
         <!-- SECTION1 LOGIN,JOIN END -->
 
 
@@ -106,85 +118,126 @@
 
                 <div class="cards">
                     <div class="me">
-                        <h1>나의 능력</h1>
+
                         <div>
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
+                            <table>
+                                <tr>
+                                    <div class="multiSelect" th:fragment="fragment-multiSelect">
+                                        <label> <h1>본인 스택:</h1></label>
+                                        <multi-input>
+                                            <input list="speakers">
+                                            <datalist id="speakers">
+                                                <option value="Java"></option>
+                                                <option value="Spring"></option>
+                                                <option value="Javascript"></option>
+                                                <option value="Typescript"></option>
+                                                <option value="React"></option>
+                                                <option value="Vue"></option>
+                                                <option value="Svelte"></option>
+                                                <option value="Nextjs"></option>
+                                                <option value="Nodejs"></option>
+                                                <option value="Go"></option>
+                                                <option value="Nestjs"></option>
+                                            </datalist>
+                                        </multi-input>
+                                        <button type="button" id="get">Get</button>
+                                    </div>
+                            </table>
                         </div>
                         <input type="submit">
                     </div>
 
                     <div class="u">
-                        <h1>내 동료의 능력</h1>
+
                         <div>
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
+                            <table>
+                                <tr>
+                                    <div class="multiSelect" th:fragment="fragment-multiSelect">
+                                        <label> <h1>필요한 기술:</h1></label>
+                                        <multi-input>
+                                            <input list="speakers">
+                                            <datalist id="speakers">
+                                                <option value="Java"></option>
+                                                <option value="Spring"></option>
+                                                <option value="Javascript"></option>
+                                                <option value="Typescript"></option>
+                                                <option value="React"></option>
+                                                <option value="Vue"></option>
+                                                <option value="Svelte"></option>
+                                                <option value="Nextjs"></option>
+                                                <option value="Nodejs"></option>
+                                                <option value="Go"></option>
+                                                <option value="Nestjs"></option>
+                                            </datalist>
+                                        </multi-input>
+                                        <button type="button" id="get">Get</button>
+                                    </div>
+                            </table>
                         </div>
                         <input type="submit">
                     </div>
-                </div>
+                    <div class="matching">
+
+
+                        <button type="button" class="matching" id="matching">매칭하기</button>
+                    </div>
+
             </section>
         </div>
 
         <!-- SECTION 2 CARDS END -->
 
 
-
-
-
         <!-- SECTION3 MATCHING START -->
         <section class="sec3">
-            <div class="matching">
 
-                <span id="sec3_span"><h1>팀원을 꾸려봐요!</h1></span>
-                <br><br><br><br><br><br>
-                <button type="button" id="maching">매칭하기</button>
-            </div>
-            <!-- SECTION3 MATCHING END -->
-
-
-            <!-- FOOTER START -->
-            <div class="footer">
-                <h1>경험을 통해 성장하는 IT사이드 프로젝트 플랫폼</h1>
-                <div class="footer-left">
-                    <table>
-                        <tr>
-                            <td>About</td>
-                            <td>Service</td>
-                            <td>Blog</td>
-                        </tr>
-                    </table>
-                </div>
-
-                <div class="footer-right">
-                    <table>
-                        <tr>
-                            <td>CONTACT</td>
-                            <td><p>Lorem ipsum dolor,  rem ipsum ratione? Iste, minima.</p></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
         </section>
+        <!-- SECTION3 MATCHING END -->
+
+
+        <!-- FOOTER START -->
+        <div class="footer">
+            <h1>경험을 통해 성장하는 IT사이드 프로젝트 플랫폼</h1>
+            <div class="footer-left">
+                <table>
+                    <tr>
+                        <td>About</td>
+                        <td>Service</td>
+                        <td>Blog</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="footer-right">
+                <table>
+                    <tr>
+                        <td>CONTACT</td>
+                        <td><p>Lorem ipsum dolor,  rem ipsum ratione? Iste, minima.</p></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
         <!-- FOOTER END -->
 
         <script>
-
-
-
 
             function goToScroll(name) {
                 var location = document.querySelector("." + name).offsetTop;
                 window.scrollTo({top: location, behavior: 'smooth'});
             }
+            var mydiv = document.getElementById("mydiv");
+            if (mydiv.addEventListener) {
+                // IE9, Chrome, Safari, Opera
+                mydiv.addEventListener("mousewheel", MouseWheelHandler, false);
+                // Firefox
+                mydiv.addEventListener("DOMMouseScroll", MouseWheelHandler, false);
+            }
+// IE 6/7/8
+            else
+                mydiv.attachEvent("onmousewheel", MouseWheelHandler);
+
+
 
 
 
