--- a/src/main/resources/templates/board/multiSelect.html
+++ b/src/main/resources/templates/board/multiSelect.html
@@ -21,7 +21,7 @@
 
 <body>
 
-	<div class="multiSelect" th:fragment="fragment-multiSelect">
+	<div class="multiSelect" th:fragment="multiSelect">
 		<label>사용 스택:</label>
 		<multi-input>
 			<input list="speakers">
@@ -46,8 +46,7 @@
 
 </body>
 
-<script th:src=@{/multi-input.js}></script>
-<script th:src=@{/script.js}></script>
+
 
 
 </html>
