--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -8,54 +8,51 @@
 <title>게시글 작성</title>
 </head>
 <style>
-*{
-margin: 0;
-padding: 0;
-font-family: 'Gothic A1', sans-serif;	
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Gothic A1', sans-serif;
 }
 
-section{
+section {
 	text-align: center;
 	text-align: center;
-
 }
 
-select{
+select {
 	position: relative;
 	margin-top: 50px;
 	text-align: center;
 	height: 50px;
-
-
 }
-.member{
-position: absolute;
-margin-left: 0px;
-padding: 10px;
 
+.member {
+	position: absolute;
+	margin-left: 0px;
+	padding: 10px;
 }
-.writer{
+
+.writer {
 	float: left;
-	width:600px;
+	width: 600px;
 	margin-top: 50px;
-
-
 }
-.upload{
-text-align: center;
 
+.upload {
+	text-align: center;
 }
-.buttons{
-text-align: center;
-}
-.buttons input{
 
-float: right;
+.buttons {
+	text-align: center;
+}
+
+.buttons input {
+	float: right;
 }
 </style>
 <body>
 
-<!--  목표?
+	<!--  목표?
 
 
 value="recruit"일 경우 > 시작일자, 요구스택
@@ -64,46 +61,55 @@ value="apply"일 경우 > 가능스택
 -->
 	<section>
 
-<form action="/board/write" method="post" enctype="multipart/form-data">
-<select name="category" >
-<option value="recruit">팀원구하기</option>
-<option value="apply">프로젝트팀구하기</option>
-</select>
+		<form action="/board/write" method="post" enctype="multipart/form-data">
+			<select name="category">
+				<option value="recruit">팀원구하기</option>
+				<option value="apply">프로젝트팀구하기</option>
+			</select>
 
 
 
 
-<div class="member">
+			<div class="member">
 
 
 
-<div class="writer">작성자:<input type="text" name="memberNum" value="3" readonly>
-<div>제목:<input type="text" name="title"></div>
-<div>프로젝트 시작일:<input type="date" name="startDate"></div>
-</div>
-<div> <div th:replace="~{@{/board/multiSelect}}"></div>
-<div style="display:none"><input type="text" name="stack" id="stack" value="밸류"/></div>
+				<div class="writer">
+					작성자:<input type="text" name="memberNum" value="3" readonly>
+					<div>
+						제목:<input type="text" name="title">
+					</div>
+					<div>
+						프로젝트 시작일:<input type="date" name="startDate">
+					</div>
+				</div>
+				<div>
+					<div th:replace="~{board/multiSelect :: multiSelect}"></div>
+					<div style="display: none">
+						<input type="text" name="stack" id="stack" value="밸류" />
+					</div>
 
 
 
-</div>
+				</div>
 
 
-<div class="upload">
-<textarea class="textarea" cols="50" rows="10" name="content" autofocus="autofocus" placeholder="내용"></textarea>
-</div>
-<div class="buttons">
-<button type="submit">저장</button>
-<button type="button" onclick="location.href='/board/list'">목록</button>
+				<div class="upload">
+					<textarea class="textarea" cols="50" rows="10" name="content" autofocus="autofocus" placeholder="내용"></textarea>
+				</div>
+				<div class="buttons">
+					<button type="submit">저장</button>
+					<button type="button" onclick="location.href='/board/list'">목록</button>
 
-<input type="file" id="chooseFile" name="uploadFile" accept="image/*">
+					<input type="file" id="chooseFile" name="uploadFile" accept="image/*">
 
-</div>
-</div>
-</form>
-</section>
+				</div>
+			</div>
+		</form>
+	</section>
 
 
 </body>
-
+<script th:src=@{/multi-input.js}></script>
+<script th:src=@{/script.js}></script>
 </html>
