--- a/src/main/resources/templates/member/main.html
+++ b/src/main/resources/templates/member/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE  PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -8,13 +8,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="slide.css">
+<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/slide.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   
-<script language="javascript" src="jquery/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script language="javascript" src="jquery/jquery-ui.min.js" type="text/javascript"></script>
-<script language="javascript" src="jquery/jq.rolling.js" type="text/javascript"></script>
+<script language="javascript" src="/jquery/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script language="javascript" src="/jquery/jquery-ui.min.js" type="text/javascript"></script>
+<script language="javascript" src="/jquery/jq.rolling.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jq.rolling.css"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
@@ -24,7 +24,7 @@
 <header>
 <nav>
 <div class="logo">
-<img src="images/llogo.gif" alt="" id="logo" onclick="goToScroll('a')">
+<img src="/images/llogo.gif" alt="" id="logo" onclick="goToScroll('a')">
 </div>
 <div class="menu">
 
@@ -58,9 +58,9 @@ space_dashboard게시판
 <div class="slideShow">
 	<div id="rolling">
 		<ul>
-			<li class="sp01"><img src="images/pepe1.gif" alt=""></li>
-			<li class="sp02"><img src="images/pepe2.gif" alt=""></li>
-			<li class="sp03"><img src="images/pepe3.gif" alt=""></li>
+			<li class="sp01"><img src="/images/pepe1.gif" alt=""></li>
+			<li class="sp02"><img src="/images/pepe2.gif" alt=""></li>
+			<li class="sp03"><img src="/images/pepe3.gif" alt=""></li>
 		</ul>
 	</div>
 <ul class="pages"></ul>
@@ -99,7 +99,7 @@ space_dashboard게시판
 			<li><span>|</span>비밀번호 찾기</li>
 
 		</ul>
-		<div class="api"> <img src="images/api.jpg" alt=""> </div>
+		<div class="api"> <img src="/images/api.jpg" alt=""> </div>
 	</div>
 
 </div>
