--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -9,12 +9,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/slide.css">
-        <link th:href="@{/login-after.css}" rel="stylesheet">
+        <link rel="stylesheet" href="/login-after.css">
         <script src="/https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script language="javascript" src="/jquery/jquery-1.9.1.min.js" type="text/javascript"></script>
         <script language="javascript" src="/jquery/jquery-ui.min.js" type="text/javascript"></script>
         <script language="javascript" src="/jquery/jq.rolling.js" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" href="/jq.rolling.css"/>
+        <link rel="stylesheet" type="text/css" href="/static/jq.rolling.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     </head>
@@ -34,7 +34,7 @@ other_houses메인
                     </a>
 
                     <a href="#sec3" onclick="goToScroll('b')" class="menu-login-icon"><span class="material-symbols-outlined">
-manage_accounts로그인
+manage_accounts내정보
 </span>
                     </a>
 
@@ -89,7 +89,18 @@ space_dashboard게시판
 
                         <button id="edit">정보 수정</button>
 
-
+						 <div class="myLog">
+                            <h4>log</h4>
+                            <ul>
+                                <li>UI / UX</li>
+                                <li>HTML1</li>
+                                <li>CSS2</li>
+                                <li>JavaScript1</li>
+                                <li>jQuery</li>
+                                <li>React</li>
+                                <li>Node JS</li>
+                            </ul>
+                        </div>
 
                         <div class="skills">
                             <h4>Skills</h4>
