--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -10,6 +10,7 @@
 
 <th>글번호</th>
 <th>카테고리</th>
+<th>스택</th>
 <th>제목</th>
 <th>작성자</th>
 <th>작성일자</th>
@@ -18,9 +19,13 @@
 <!-- <form name="searchList" action="/board/list" method="post">
    <input type='search' name='searchKeyword' /><button type="submit">검색</button>
 </form> -->
-<tr th:each="board : ${list}">
+<tr th:each="board : ${boardList}">
 <td><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.boardNum}"></a></td>
 <td th:text="${board.category}"></td>
+<td>
+<ul th:each="aa : ${board.stack}">
+<li>[[${aa}]]</li>
+</ul></td>
 <td th:text="${board.title}"></td>
 <td th:text="${board.memberNum}"></td>
 <td th:text="${board.date}"></td>
