--- a/src/main/resources/templates/myLog/myComment.html
+++ b/src/main/resources/templates/myLog/myComment.html
@@ -1,6 +1,6 @@
 
 <div>
-작성 글 입니다
+댓글 단 글 입니다
  <table border="1">
       <tr>
         <th>카테고리</th>
@@ -19,6 +19,5 @@
       </tr>
     </table> 
 </div>
-
 
 
