--- a/src/main/resources/templates/myLog/myLog.html
+++ b/src/main/resources/templates/myLog/myLog.html
@@ -1,6 +1,6 @@
 
 <div>
-댓글 단 글 입니다
+<h4 th:text="${myLog}"></h4>
  <table border="1">
       <tr>
         <th>카테고리</th>
@@ -19,5 +19,4 @@
       </tr>
     </table> 
 </div>
-
 
