--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -86,7 +86,7 @@ value="apply"일 경우 > 가능스택
 				<div>
 					<div th:replace="~{board/multiSelect :: multiSelect}"></div>
 					<div style="display: none">
-						<input type="text" name="stack" id="stack" value="밸류" />
+						<input type="text" name="stack" id="stack" value="선택안함" />
 					</div>
 
 
