--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -78,9 +78,9 @@ border: 1px solid black;
 <td><input type="hidden" name="memberNum" th:value="${comment.memberNum}"></td>
 <td><input type="hidden" name="commentNum" th:value="${comment.commentNum}"></td>
 <td><input type="hidden" name="boardNum" th:value="${detail.boardNum}"></td>
-<td><input type="submit" value="수정" formaction="/comment/update">
+<td><input type="submit" value="수정" id="commentUpdate" formaction="/comment/update">
 </td>
-<td><input type="submit" value="삭제" formaction="/comment/delete">
+<td><input type="button" value="삭제" id="commentDelete">
 </td>
 <br>
 <br>
@@ -115,7 +115,25 @@ border: 1px solid black;
 </div>
 </body>
 
+<script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
+
+에이젝스 구현부터 
+/*
+$('#commentDelete').click(function()){
+	$.ajax({
+		url: './notCertificated.html',
+		type:'GET',
+		data:{},
+		success:function(data){
+			$('#commentPopup').html(data);
+		}
+		
+		})
+	});	
+*/
+	
+	
 
 function detailUpdateAction(){
 	//작성자명 class와 로그인유저 class 를 선택해서 일치여부 확인
