--- a/src/main/resources/templates/myLog/myLog.html
+++ b/src/main/resources/templates/myLog/myLog.html
@@ -10,7 +10,7 @@
         <th>시작일자</th>
       </tr>
       
-      <tr th:each="list : ${list}">
+      <tr th:each="list : ${boardList}">
         <td th:text="${list.category}"></td>
         <td th:text="${list.title}"></td>
         <td th:text="${list.loginId}"></td>
@@ -18,5 +18,33 @@
         <td th:text="${list.startDate}"></td>
       </tr>
     </table> 
+    
+    
+    <div id="pagination">
+	<!-- 맨 처음 페이지로 이동하는 버튼 -->
+    <span th:if="${pageVo.startPage > 1}">
+        <a th:href="@{'/myLog/myWrite?page=1'}" th:text="'처음&emsp;'"></a>
+    </span>
+
+	<!-- 이전 블록으로 이동하는 버튼 -->
+    <span th:if="${pageVo.isPrev == true}">
+    	<a th:href="@{'/myLog/myWrite?page='+${pageVo.startPage - 1}}" th:text="'이전'"></a>
+    </span>
+
+    <!-- 시퀀스 보여주는 값을 변경. -->
+    <span th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}">
+        <a class="div2" th:href="@{'/myLog/myWrite?page='+${pageNum}}" th:text="|&emsp;${pageNum}&emsp;|"></a>
+    </span>
+	
+    <!-- 다음 블록으로 이동하는 버튼 -->
+    <span th:if="${pageVo.isNext == true}">
+	<a th:href="@{'/myLog/myWrite?page='+|${pageVo.endPage + 1}|}" th:text="'다음'"></a>
+    </span>
+	
+    <!-- 맨 뒷 페이지로 이동하는 버튼 -->
+    <span th:if="${pageVo.endPage < pageVo.totalPageCount}">
+	<a th:href="@{'/myLog/myWrite?page='+${pageVo.totalPageCount}}" th:text="|&emsp;끝|"></a>
+    </span>
+</div>
 </div>
 
