--- a/src/main/resources/templates/member/main.html
+++ b/src/main/resources/templates/member/main.html
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+<div class="board-button">
+<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
+<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
+<button type="button" onclick="location.href='/board/list'">전체임시</button>
+</div>
 <header>
 <nav>
 <div class="logo">
@@ -49,7 +54,7 @@ space_dashboard게시판
 </div>
 </nav>
 </header>
-바뀌었는지확인
+
 	<div class="side-left"></div>
 	<div class="side-right"></div>
 <!-- SECTION 0 PRODUCTS SLIDE START-->
