--- a/src/main/resources/templates/comment/notCertificated.html
+++ b/src/main/resources/templates/comment/notCertificated.html
@@ -5,6 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
+아이디가 다릅니다.
+
+<input type="button" value="BACK" onClick="history.go(-1)"> 
+
 
 </body>
 </html>
